Fix webapp overflow
This allows us to test volume sliders

--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -20,13 +20,18 @@ body {
 .title-down {
   text-align: center;
   color: #8a8a8a;
-  transform: scale(3, 1);
   margin-top: -5px;
+}
+.title-down i {
+  transform: scale(3, 1);
 }
 
 .source {
   background: #2a2a2a;
   margin-bottom: 10px;
+}
+.source .nav-item {
+  font-size: 0.9rem;
 }
 .source .card-header .nav .nav-item .active {
   background: #4a4a4a;
